# auction-x-backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
backend/: config.py  main.py  test_main.py
backend/db/: conftest.py  listings.py  test_listings.py  test_users.py  users.py
backend/dependencies/: db.py  users.py
backend/routers/: conftest.py  listings.py  test_users.py  users.py
backend/schemas/: __init__.py  apiresponse.py  bids.py  images.py  listings.py  test_users.py  users.py
backend/utils/: db.py  main.py  test_main.py
